# gren-lsp

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  NOTES.md  README.md  build.rs  clippy.toml  debug_tree.rs  issues.md  justfile  performance_test_results.md  rust-toolchain.toml  test-implementation.md  test.js  tmux.md
.bmad-core/: install-manifest.yaml
.bmad-core/data/: technical-preferences.md
agents/: README.md  agentWatchdog.ts  checkFileLock.ts  claude-hooks-config.json  claude-log-indented.txt  cleanupLocks.ts  cleanupStalledAgent.ts  closeIdleAgent.ts  createAgent.ts  fileLocking.ts  getAgentHistory.ts  getAgentStatus.ts  notifyOrchestrator.ts  orchestrator.md  releaseFileLock.ts  sendToAgent.ts  setAgentStatus.ts  setupHooks.ts  utils.ts
agents/hooks/: claude-hooks-config.json  onAgentComplete.ts  postToolHook.ts  preToolHook.ts
dev-tools/production-validation/: cross-platform-testing.js  performance-monitoring.js  run-production-validation.js  run-validation.sh  stress-testing.js  validation-framework.js  workflow-scenarios.js
docs/: architecture.md  end-to-end-test-scenarios.md  epic-6-story-3-executive-summary.md  feature-gap-analysis.md  integration-test-results.md  performance-benchmarks.md  prd.md
docs/architecture/: coding-standards.md  components.md  concurrency-model.md  configuration.md  core-components.md  core-workflows.md  data-flow-architecture.md  data-models.md  design-principles-no-fallbacks-or-close-enough.md  document-management-considerations.md  error-handling-strategy.md  external-apis.md  gren-specific-lsp-considerations.md  high-level-architecture.md  index.md  introduction.md  key-dependencies.md  lsp-types-integration-benefits.md  overview.md  performance-considerations.md  performance-optimizations.md  rest-api-spec.md  security-considerations.md  source-tree.md  summary.md  tech-stack.md  testing-architecture.md  tree-sitter-ast-structure.md
docs/epics/: epic-001-project-foundation.md  epic-002-core-lsp-implementation.md  epic-003-advanced-features.md  epic-004-testing-quality.md  epic-005-documentation-release.md  epic-1-foundation.md  epic-2-core-features.md  epic-3-advanced-navigation.md  epic-4-polish-enhancement.md  epic-5-advanced-refactoring.md  epic-6-vscode-extension.md  epic-7-enhanced-developer-experience.md  epic-8-marketplace-distribution.md  epic-overview.md  index.md
docs/prd/: executive-summary.md  functional-requirements.md  goals-and-objectives.md  implementation-phases.md  index.md  non-functional-requirements.md  project-background.md  risk-assessment.md  success-criteria.md  technical-requirements.md  user-experience-requirements.md
docs/stories/: 1.1.treesitter-baseline.md  2.1.symbol-indexing.md  2.2.code-completion.md  2.3.hover-information.md  2.4.goto-definition.md  3.1.find-references.md  3.10.manual-vscode-integration-testing.story.md  3.3.implement-rename-refactoring.story.md  3.4.find-all-references.story.md  3.5.import-management.story.md  3.6.code-formatting-integration.story.md  3.7.code-actions-and-quick-fixes.story.md  3.8.document-symbols-and-outline.story.md  3.9.workspace-symbols.story.md  6.4.extension-functionality-completion.md  7.2.signature-help.md
docs/tree-sitter-ast/: README.md  TreeSitterReference.gren  baseline-with-error.ast  baseline.ast  gren.json
editor-extensions/vscode/: .mocharc.json  README-TESTING-NEW.md  README-TESTING.md  README.md  debug-lsp.md  gren-lsp-1.0.0.vsix  language-configuration.json  package-lock.json  package.json  test.gren  tsconfig.json
gren-lsp-core/: Cargo.toml
gren-lsp-core/benches/: parser_bench.rs
gren-lsp-core/src/: analysis.rs  compiler.rs  compiler_diagnostics.rs  diagnostics.rs  document.rs  lib.rs  parser.rs  symbol.rs  workspace.rs
gren-lsp-core/tests/: analysis_tests.rs  document_tests.rs  parser_tests.rs  workspace_tests.rs
gren-lsp-protocol/: Cargo.toml
gren-lsp-protocol/src/: handlers.rs  lib.rs
gren-lsp-protocol/tests/: handlers_tests.rs
gren-lsp-server/: Cargo.toml
gren-lsp-server/src/: lib.rs  main.rs  server.rs  test_utils.rs
gren-lsp-server/tests/: lsp_integration_tests.rs  lsp_protocol_communication_tests.rs  server_tests.rs  test-gren-compiler-package.json
gren_test/: gren.json
gren_test/src/: Main.gren
lsp/: test-cases.md
lsp-server/: Cargo.toml
lsp-server/src/: code_actions.rs  code_actions_integration_tests.rs  compiler_interface.rs  completion.rs  document_manager.rs  document_symbols.rs  document_symbols_integration_tests.rs  file_operations.rs  find_references.rs  goto_definition.rs  goto_definition_integration_tests.rs  gren_language.rs  hover_integration_tests.rs  import_completion.rs  import_completion_integration_tests.rs  import_manager.rs  import_rewriter.rs  lib.rs  lsp_service.rs  main.rs  module_rename.rs  module_rename_integration_tests.rs  performance.rs  rename.rs  rename_basic_tests.rs  rename_comprehensive_tests.rs  rename_integration_tests.rs  symbol_index.rs  tree_sitter_queries.rs  workspace_protocol.rs  workspace_symbols.rs  workspace_symbols_integration_tests.rs
lsp-server/tests/: integration.rs  large_project_test.rs  performance_tests.rs
lsp-server/tests/fixtures/: lsp_messages.json
lsp-server/tests/helpers/: lsp_test_client.rs  mod.rs  response_validator.rs  server_process.rs
lsp-server/tests/integration/: completion_tests.rs  document_lifecycle_tests.rs  error_handling_tests.rs  references_tests.rs
src/: compiler_interface.rs  completion_integration_tests.rs  diagnostics.rs  document_manager.rs  gren_language.rs  hover.rs  hover_integration_tests.rs  lib.rs  lsp_service.rs  main.rs  scope_analysis.rs  symbol_index.rs  tree_sitter_queries.rs
test-files/: Bytes.gren  test.gren  test_integration.gren  test_symbols.gren
test-gren/src/: Main.gren
test-projects/json-parser/: .gitignore  README.md  build.fish  gren.json  push.fish
test-projects/package/: CHANGELOG.md  README.md  devbox.json  gren.json
test-projects/tetris/: .gitignore  README.md  deploy.fish  gren.json  index.html  push.fish
tests/: integration.rs
tests/helpers/: mod.rs  (+3 more)
(+142 files in other folders)
