[workspace]
resolver = "2"
members = [
    "gren-lsp-server",
    "gren-lsp-core", 
    "gren-lsp-protocol",
]

[workspace.package]
version = "0.1.0"
authors = ["Gren LSP Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dkoontz/gren-lsp"
homepage = "https://github.com/dkoontz/gren-lsp"
keywords = ["gren", "lsp", "language-server"]
categories = ["development-tools"]
rust-version = "1.82.0"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.32.0", features = ["full"] }

# LSP implementation
tower-lsp = "0.20.0"
lsp-types = "0.94.1"
lsp-textdocument = "0.3.0"

# Serialization
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

# Logging and diagnostics
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"

# Database for symbol storage
rusqlite = { version = "0.29.0", features = ["bundled"] }

# Tree-sitter for parsing
tree-sitter = "0.20.10"
# tree-sitter-gren will be added once available

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.48"

# Testing
mockall = "0.11.4"
criterion = "0.5.1"
proptest = "1.2.0"
tokio-test = "0.4.3"
tower-test = "0.4.0"

# Utilities
uuid = { version = "1.5.0", features = ["v4", "serde"] }


[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0