[package]
name = "gren-lsp-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LSP protocol handlers for Gren LSP"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Internal crates
gren-lsp-core = { path = "../gren-lsp-core" }

[dev-dependencies]
mockall.workspace = true

[[bin]]
name = "test_symbol_handlers"
path = "src/bin/test_symbol_handlers.rs"