[package]
name = "gren-lsp-protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LSP protocol handlers for Gren LSP"

[dependencies]
# Workspace dependencies
tokio.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
urlencoding = "2.1.3"

# Internal crates
gren-lsp-core = { path = "../gren-lsp-core" }

[dev-dependencies]
mockall.workspace = true
regex.workspace = true
walkdir.workspace = true

[[bin]]
name = "test_symbol_handlers"
path = "src/bin/test_symbol_handlers.rs"

[[bin]]
name = "test_hover_formatting"
path = "src/bin/test_hover_formatting.rs"

[[bin]]
name = "test_client_capabilities"
path = "src/bin/test_client_capabilities.rs"

[[bin]]
name = "test_rename_final"
path = "src/bin/test_rename_final.rs"