[package]
name = "gren-lsp-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol implementation for the Gren programming language"

[lib]
name = "gren_lsp_server"
path = "src/lib.rs"

[[bin]]
name = "gren-lsp"
path = "src/main.rs"



[dependencies]
# Workspace dependencies
tokio.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
uuid.workspace = true

# Internal crates
gren-lsp-core = { path = "../gren-lsp-core" }
gren-lsp-protocol = { path = "../gren-lsp-protocol" }

# CLI argument parsing
clap = { version = "4.4.2", features = ["derive", "env"] }

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
tower-test.workspace = true