[package]
name = "gren-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Gren LSP Contributors"]
description = "Language Server Protocol implementation for the Gren programming language"
license = "MIT"

[[bin]]
name = "gren-lsp"
path = "src/main.rs"

[dependencies]
# LSP Framework
tower-lsp = "0.20"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tree-sitter for parsing  
tree-sitter = "0.22"
tree-sitter-gren = { path = "../tree-sitter-gren" }

# Database for symbol indexing
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
tokio-util = { version = "0.7", features = ["codec"] }

# Document lifecycle management
lru = "0.12"
url = "2.4"

# UTF-8 and text processing
ropey = "1.6"
regex = "1.0"

# Temporary file handling
tempfile = "3.0"


[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.0"
assert_matches = "1.5"
futures = "0.3"

[features]
default = []
debug = ["tracing-subscriber/fmt"]